--- a/UI/apps/mobile/src/index.html
+++ b/UI/apps/mobile/src/index.html
@@ -3,11 +3,15 @@
   <head>
     <meta charset="utf-8" />
     <title>MOBILE Store Flow</title>
-    <base href="" />
+    <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="images/icon-principal.svg" />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="./assets/images/icon-principal.svg"
+    />
   </head>
-  <body class="mat-typography">
+  <body class="mat-typography bg-grey-200">
     <app-root></app-root>
   </body>
 </html>
