Adaptación del login de usuarios Web de usuarios mobile

--- a/UI/apps/web/src/index.html
+++ b/UI/apps/web/src/index.html
@@ -5,9 +5,13 @@
     <title>WEB Store Flow</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/svg+xml" href="/images/icon-principal.svg" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="./assets/images/icon-principal.svg"
+    />
   </head>
-  <body class="mat-typography">
+  <body class="mat-typography bg-grey-200">
     <app-root></app-root>
   </body>
 </html>
